--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>All Posts</title>
+    <title>PostHunt</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Posts Hunt</h1>
+    <h1>PostHunt</h1>
     <div id="box">
       <% for( post of posts){%>
       <div class="post">
